{
  "version": 4,
  "terraform_version": "1.4.2",
  "serial": 53,
  "lineage": "c845dd42-9940-394a-5a16-0496a5468508",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_elb",
      "name": "web_elb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:583587526190:loadbalancer/web-elb",
            "availability_zones": [
              "us-east-1a",
              "us-east-1b"
            ],
            "connection_draining": false,
            "connection_draining_timeout": 300,
            "cross_zone_load_balancing": true,
            "desync_mitigation_mode": "defensive",
            "dns_name": "web-elb-1247687426.us-east-1.elb.amazonaws.com",
            "health_check": [
              {
                "healthy_threshold": 2,
                "interval": 30,
                "target": "HTTP:80/",
                "timeout": 3,
                "unhealthy_threshold": 2
              }
            ],
            "id": "web-elb",
            "idle_timeout": 60,
            "internal": false,
            "listener": [
              {
                "instance_port": 80,
                "instance_protocol": "http",
                "lb_port": 80,
                "lb_protocol": "http"
              }
            ],
            "name": "web-elb",
            "security_groups": [
              "sg-02dafccd1d675fe5e"
            ],
            "source_security_group": "583587526190/elb_http",
            "source_security_group_id": "sg-02dafccd1d675fe5e",
            "subnets": [
              "subnet-0bcd099c29d52e401",
              "subnet-0c8cc90bc1de60c99"
            ],
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_security_group.elb_http",
            "aws_subnet.public_us_east_1a",
            "aws_subnet.public_us_east_1b",
            "aws_vpc.my_vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "my_vpc_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:583587526190:internet-gateway/igw-0ee93da5d5362041c",
            "id": "igw-0ee93da5d5362041c",
            "owner_id": "583587526190",
            "tags": {
              "Name": "My VPC - Internet Gateway"
            },
            "tags_all": {
              "Name": "My VPC - Internet Gateway"
            },
            "vpc_id": "vpc-017e13bd765199d60"
          },
          "dependencies": [
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "my_vpc_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:583587526190:route-table/rtb-032264b4bb06b8048",
            "id": "rtb-032264b4bb06b8048",
            "owner_id": "583587526190",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0ee93da5d5362041c",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Public Subnets Route Table for My VPC"
            },
            "tags_all": {
              "Name": "Public Subnets Route Table for My VPC"
            },
            "timeouts": null,
            "vpc_id": "vpc-017e13bd765199d60"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.my_vpc_igw",
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "my_vpc_us_east_1a_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04459ff2d952809a8",
            "route_table_id": "rtb-032264b4bb06b8048",
            "subnet_id": "subnet-0c8cc90bc1de60c99"
          },
          "dependencies": [
            "aws_internet_gateway.my_vpc_igw",
            "aws_route_table.my_vpc_public",
            "aws_subnet.public_us_east_1a",
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "my_vpc_us_east_1b_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-041e00934876260a6",
            "route_table_id": "rtb-032264b4bb06b8048",
            "subnet_id": "subnet-0bcd099c29d52e401"
          },
          "dependencies": [
            "aws_internet_gateway.my_vpc_igw",
            "aws_route_table.my_vpc_public",
            "aws_subnet.public_us_east_1b",
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:583587526190:security-group/sg-005e0aed3659fcb35",
            "description": "Allow HTTP inbound connections",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-005e0aed3659fcb35",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "allow_http",
            "name_prefix": "",
            "owner_id": "583587526190",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Allow HTTP Security Group"
            },
            "tags_all": {
              "Name": "Allow HTTP Security Group"
            },
            "timeouts": null,
            "vpc_id": "vpc-017e13bd765199d60"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.my_vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "elb_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:583587526190:security-group/sg-02dafccd1d675fe5e",
            "description": "Allow HTTP traffic to instances through Elastic Load Balancer",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-02dafccd1d675fe5e",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "elb_http",
            "name_prefix": "",
            "owner_id": "583587526190",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Allow HTTP through ELB Security Group"
            },
            "tags_all": {
              "Name": "Allow HTTP through ELB Security Group"
            },
            "timeouts": null,
            "vpc_id": "vpc-017e13bd765199d60"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.my_vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_us_east_1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:583587526190:subnet/subnet-0c8cc90bc1de60c99",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c8cc90bc1de60c99",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "583587526190",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Public Subnet us-east-1a"
            },
            "tags_all": {
              "Name": "Public Subnet us-east-1a"
            },
            "vpc_id": "vpc-017e13bd765199d60"
          },
          "dependencies": [
            "aws_vpc.my_vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_us_east_1b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:583587526190:subnet/subnet-0bcd099c29d52e401",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0bcd099c29d52e401",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "583587526190",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Public Subnet us-east-1b"
            },
            "tags_all": {
              "Name": "Public Subnet us-east-1b"
            },
            "vpc_id": "vpc-017e13bd765199d60"
          },
          "dependencies": [
            "aws_vpc.my_vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "my_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:583587526190:vpc/vpc-017e13bd765199d60",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-03ca66b8b3c059157",
            "default_route_table_id": "rtb-04bfe01ad9431eeee",
            "default_security_group_id": "sg-0e1287c575be300c0",
            "dhcp_options_id": "dopt-0a2cb8f7825edec69",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-017e13bd765199d60",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-04bfe01ad9431eeee",
            "owner_id": "583587526190",
            "tags": {
              "Name": "My VPC"
            },
            "tags_all": {
              "Name": "My VPC"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}